--- a/homework1nonsub.html
+++ b/homework1nonsub.html
@@ -1,10 +1,10 @@
 <html>
-<head>Business Canvas Model</head>
+<head>Homework Assignment 3</head>
 <title>CSC 101 Homeork 3</title>
 <body>
 <br>
 <br>
-<table style="width:100%"
+<table align="center" style="width:1000">
 <tr>
 <th>Key Partnerships</th>
 <th>Key Activities</th>
@@ -17,17 +17,76 @@
 <th>Revenue Streams</th>
 </tr>
 <tr>
-<td>Gaming Website, Comic Book Store, Electronic Store, Facbook</td>
-<td>Supplier, means of delivery, finance, marketing Plan, long and short term goals</td>
-<td>Appealing prices to the consumer  </td>
-<td>Loyalty to our customers. We have their best interest in mind.</td>
-<td>Mostly pre-teens, as well as both genders from the online gaming community</td>
-<td>Key words; StarWars, collector figurines, reasonably priced.</td>
-<td>Through the medium of our website, adverstisment, and word of mouth between costumers.</td>
-<td>Since we have $1000 per month, most of the money will go towards supplying and making the products.</td>
-<td>We will be recieving revenue from customer purchases, add revenue, and website traffic.</td>
+<td> <ul>
+<li>Gaming Website
+<li> Comic Book Store
+<li> Electronic Store 
+<li>Facbook
+</li>
+</ul>
+<td> <ul>
+<li>Supplier
+<li>Means of delivery
+<li>Finance
+<li>Marketing Plan
+<li>Long and short term goals
+</li>
+</ul>
+<td> <ul>
+<li>Appealing prices to the consumer</td>
+</li>
+</ul>
+<td><ul>
+<li>Loyalty to our customers. We have their best interest in mind</td>
+</li>
+</ul>
+<td> <ul>
+<li>Mostly pre-teens, as well as both genders from the online gaming community</td>
+</li>
+</ul>
+<td> <ul>
+<li>Key words; 
+<li>StarWars
+<li>collector figurines
+<li>reasonably priced.</td>
+</li>
+</ul>
+<td> <ul>
+<li>Through the medium of our website, adverstisment, and word of mouth between costumers.</td>
+</li>
+</ul>
+<td><ul>
+<li>Since we have $1000 per month, most of the money will go towards supplying and making the products.</td>
+</li>
+</ul>
+<td> <ul>
+<li>We will be recieving revenue from customer purchases, add revenue, and website traffic.</td>
+</li>
+</ul>
 </tr>
-</table>
 
+<br>
+<hr>
+<br>
+
+<h1>
+Business Canvas Model
+</h1>
+</table>
+<h1>
+Emphasizing on Keywords, and their purpose
+</h1>
+<br>
+<p> The keywords that are relevant to our products are; starwars, collector figurines, and reasonably priced. We will purchase and advertise through these keywords. Keywords are words or phrases that will match your product, that are relevant to what a consumer may be searching the internet for. Purchasing a keyword is a terrific marketing plan, as one becomes more profitable through less effort. We are only purchasing keywords with commercial intent. When we purchase the keywords, our product will be one of the first options when a consumer browses or shops through a search engine. When we purchase the keywords, our product will be filtered by the search engine used as one of the most suggested options for the browser. The search engine simply advertises our product for us. 
+ 
+</p>
+<br>
+<h1>
+Cost-per-click Data
+</h1>
+<div align="center">
+<img width="800" height="400" src="cpc.jpg">
+</div>
+<br>
 </body>
 </html>
